## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

libcgiccextended_includedir = $(pkgincludedir)

libcgiccextended_include_DATA = \
	CgiccExtended.hh

EXTRA_DIST = $(libcgiccextended_include_DATA)
