## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	 -I../include

CXXFLAGS =\
	 -Wall -Wimplicit -Wunused -Wmissing-prototypes\
	 -O1\
	 -g

lib_LTLIBRARIES = libcgiccextended.la

libcgiccextended_la_SOURCES = \
	CgiccExtended.cc

libcgiccextended_la_LDFLAGS = 

libcgiccextended_la_LIBADD = \
	 -lcgicc

